# Detection-Wizard

./: .gitignore  Cargo.toml  README.md  TODO.txt
.github/workflows/: release.yml  rust.yml
src/: app.rs  download.rs  ioc_menu.rs  lib.rs  main.rs  main_menu.rs  menu.rs  qradar.rs  rule_menu.rs  sigma.rs  splunk.rs  suricata.rs  ui.rs  ui_ioc.rs  ui_rule.rs  yara.rs
src/ioc/: ioc_menu.rs  mod.rs  ui_ioc.rs
src/rules/: Velociraptor.rs  grab_mitre.rs  mod.rs  qradar.rs  rule_menu.rs  sigma.rs  splunk.rs  suricata.rs  sysmon.rs  ui_rule.rs  yara.rs  zeek.rs
tests/: main_menu_tests.rs
