[package]
name = "detection-wizard"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.10"
regex = "1"
git2 = "0.15"
walkdir = "2"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.5"
flate2 = "1.0"
tar = "0.4"
eframe = "0.27"
egui = "0.27"
image = "0.25"
chrono = "0.4"