[package]
name = "detection-wizard"
version = "1.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.10"
regex = "1"
git2 = "0.15"
walkdir = "2"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.5"
flate2 = "1.0"
tar = "0.4"
eframe = "0.27"
egui = "0.27"
image = "0.25"
chrono = "0.4"
rfd = "0.12"
indicatif = "0.18.0"
tempfile = "3.20.0"
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }


[profile.release]
strip = "symbols"

[package.metadata.windows]
subsystem = "windows"

[package.metadata.winres]
windows_subsystem = "windows"
