[package]
name = "detection-wizard"
version = "1.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11"
regex = "1"
git2 = "0.20.2"
walkdir = "2"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "4.3.0"
flate2 = "1.0"
tar = "0.4"
eframe = "0.32.0"
egui = "0.32.0"
image = "0.25"
chrono = "0.4"
rfd = "0.15.4"
indicatif = "0.18.0"
tempfile = "3.20.0"
scraper = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
winres = "0.1"

[profile.release]
strip = "symbols"

[package.metadata.windows]
subsystem = "windows"

[package.metadata.winres]
windows_subsystem = "windows"
